@@ -25,3 +25,4 @@ Release notes for Version 1.24 (Sept 2015 -- )
 - improved the MAC-OSX version of X11-Basic
 - improved 64bit version of X11-Basic
 - fixed bug in CLEARW
+- fixed missing pixel in BOX/HLINE (framebuffer versions)
